On branch main Changes to be committed: 	modified:   Atividade-2/index.html 	modified:   Atividade-2/script.js

--- a/Atividade-2/index.html
+++ b/Atividade-2/index.html
@@ -14,6 +14,8 @@
     <button onclick="mostrarIMC(Pessoas[2])">Calcular IMC - Aluno 3</button>
     <button onclick="mostrarIMC(Pessoas[3])">Calcular IMC - Aluno 4</button>
     <button onclick="mostrarIMC(Pessoas[4])">Calcular IMC - Aluno 5</button>
+    <br>
+    <button onclick="separarPorCategoria()"> Total por categoria </button>
     <p id="resultado">Nenhum Aluno selecionado</p>
 </body>
 </html>
