--- a/Atividade-2/index.html
+++ b/Atividade-2/index.html
@@ -15,7 +15,7 @@
     <button onclick="mostrarIMC(Pessoas[3])">Calcular IMC - Aluno 4</button>
     <button onclick="mostrarIMC(Pessoas[4])">Calcular IMC - Aluno 5</button>
     <br>
-    <button onclick="separarPorCategoria()"> Total por categoria! </button>
+    <button onclick="separarPorCategoria()"> Total por categoria </button>
     <p id="resultado">Nenhum Aluno selecionado</p>
 </body>
 </html>
