--- a/Atividade-2/index.html
+++ b/Atividade-2/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamentos de JS</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <script src="script.js"></script>
-    <h1>Atividade</h1>
-    <button onclick="mostrarIMC(Pessoas[0])">Calcular IMC - Aluno 1</button>
-    <button onclick="mostrarIMC(Pessoas[1])">Calcular IMC - Aluno 2</button>
-    <button onclick="mostrarIMC(Pessoas[2])">Calcular IMC - Aluno 3</button>
-    <button onclick="mostrarIMC(Pessoas[3])">Calcular IMC - Aluno 4</button>
-    <button onclick="mostrarIMC(Pessoas[4])">Calcular IMC - Aluno 5</button>
-    <br>
-    <button onclick="separarPorCategoria()"> Total por categoria </button>
-    <p id="resultado">Nenhum Aluno selecionado</p>
+<div class="container">
+    <h1>Atividade - Fundamentos de JS</h1>
+    <div class="procurar">
+        <label name="Numero">Procure pelo IMC do Aluno:</label>
+        <input type="number" id="Numero" name="Numero" placeholder="1-20"><br>
+        <button onclick="mostrarIMC()">Procurar</button><br>
+    </div>
+    <button class="button" onclick="separarPorCategoria()">Ver quantidade por categoria</button> 
+    <button class="button" onclick="mostrarTodos()">Mostrar todos</button>
+    <div class="resultado">
+        <p class="resultado-texto" id="resultado">Nenhum Aluno selecionado</p>
+    </div> 
+</div>
 </body>
 </html>
