--- a/Atividade-2/index.html
+++ b/Atividade-2/index.html
@@ -13,9 +13,10 @@
     <h1>Atividade - Fundamentos de JS</h1>
     <div class="procurar">
         <label name="Numero">Procure pelo IMC do Aluno:</label>
-        <input type="number" id="Numero" name="Numero" placeholder="1-20"><br>
-        <button onclick="mostrarIMC()">Procurar</button><br>
+        <input type="number" id="Numero" name="Numero" placeholder="1-20">
+        <button onclick="mostrarIMC()">Procurar</button>
     </div>
+    <p>(Digite um numero entre 1-20)</p>
     <button class="button" onclick="separarPorCategoria()">Ver quantidade por categoria</button> 
     <button class="button" onclick="mostrarTodos()">Mostrar todos</button>
     <div class="resultado">
