--- a/Atividade-3/index.html
+++ b/Atividade-3/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Atividade - Fundamentos de JS</h1>
+    <h1>Atividade - Fundamentos de JS |</h1>
     <div class="procurar">
         <label name="Numero">Procure pelo IMC do Aluno:</label>
         <input type="number" id="Numero" name="Numero" placeholder="1-20">
