melhoria de algumas validações

--- a/atividade-6/curriculo.html
+++ b/atividade-6/curriculo.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Meu Currículo</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Meu Currículo</title>
+    <link rel="stylesheet" href="css/curri.css">
 </head>
+
 <body>
-  <script src="js/curri.js"></script>
+    <script src="js/curri.js"></script>
 </body>
+
 </html>
