--- a/atividade-6/index.html
+++ b/atividade-6/index.html
@@ -1,93 +1,122 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Formulário de Currículo</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Formulário de Currículo</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body>
-  <form id="form">
-    <div id="dadosPessoais">
-    <h2>Dados Pessoais</h2>
-        <div>
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" />
-        </div>
-        <div>
-            <label for="data-nascimento">Data de Nascimento:</label>
-            <input type="date" id="dataNascimento" />
-        </div>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" />
-        </div>
-        <div>
-            <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone" />
-        </div>
-        <div>
-            <label for="estadoCivil">Estado Civil:</label>
-            <select id="estadoCivil">
-                <option value="">Selecione</option>
-                    <option value="solteiro">Solteiro(a)</option>
-                    <option value="casado">Casado(a)</option>
-                    <option value="divorciado">Divorciado(a)</option>
-                    <option value="viuvo">Viúvo(a)</option>
-            </select>
-        </div>
-    </div>
-    <div id="objetivoP">
-    <h2>Objetivo Profissional</h2>
-        <div>
-            <label for="objetivo">Objetivo:</label>
-            <textarea id="objetivo"></textarea>
-        </div>
-    </div>
-<div id="formacaoAcademica">
-    <h2>Formação Acadêmica</h2>
-        <div id="camposFormacao">
-        <div>
-            <label for="instituicao">Instituição:</label>
-            <input type="text" id="instituicao">
-        </div>
-        <div>
-            <label for="nivelFormacao">Nível:</label>
-            <select id="nivelFormacao">
-            <option value="">Selecione</option>
-                <option value="fundComp">Fundamental Completo</option>
-                <option value="fundIncomp">Fundamental Incompleto</option>
-                <option value="fundCurs">Fundamental Cursando</option>
-                <option value="medioComp">Médio Completo</option>
-                <option value="medioIncomp">Médio Incompleto</option>
-                <option value="medioCurs">Médio Cursando</option>
-                <option value="superiorComp">Superior Completo</option>
-                <option value="superiorIncomp">Superior Incompleto</option>
-                <option value="superiorCurs">Superior Cursando</option>
-            </select>
-        </div>
-        <div>
-            <label for="cursoa">Curso:</label>
-            <input type="text" id="curso">
-        </div>
-        <div>
-            <label for="dataInicio">Data de início:</label>
-            <input type="date" id="dataInicio">
-        </div>
-        <div id="Conclusao">
-            <label for="dataConclusao">Data de conclusão:</label>
-            <input type="date" id="dataConclusao">
-        </div>
-        <div id="ConclusaoEsperada">
-            <label for="dataConclusaoEsperada">Mês/Ano de conclusão esperada:</label>
-            <input type="month" id="dataConclusaoEsperada">
-        </div>
-    <button id="addFormAcad">Adicionar</button>
+    <div class="containerGeral">
+        <h1>Gerador de Curriculo</h1>
+        <div class="quadro">
+            <form id="form" action="curriculo.html" method="get">
+                <div id="dadosPessoais">
+                    <h2 id="corTitulo">Dados Pessoais</h2>
+                    <span>
+                    <label for="nome">Nome Completo:</label>
+                    <input type="text" id="nome" name="name"/>
+                </span>
+
+                    <span>
+                    <label for="data-nascimento">Data de Nascimento: </label>
+                    <input type="date" id="dataNascimento" name="dataNasc" />
+                </span>
+
+                    <span>
+                    <label for="email">Email: </label>
+                    <input type="email" id="email" name="email" />
+                </span>
+                    <span>
+                    <label for="telefone">Telefone: </label>
+                    <input type="tel" id="telefone" name="phone" placeholder="(xx) xxxxx-xxxx" />
+                </span>
+
+                    <span>
+                    <label for="estadoCivil">Estado Civil: </label>
+                    <select id="estadoCivil" name="estadoCivil">
+                        <option value="">Selecione</option>
+                        <option value="Solteiro(a)">Solteiro(a)</option>
+                        <option value="Casado(a)">Casado(a)</option>
+                        <option value="Divorciado(a)">Divorciado(a)</option>
+                        <option value="Viúvo(a)">Viúvo(a)</option>
+                    </select>
+                </span>
+
+                    <span>
+                    <label for="endereco">Endereço:</label>
+                    <input type="text" id="endereco" name="address" placeholder="Digite seu endereço" />
+                </span>
+                </div>
+
+                <div class="objetivoP" id="objetivoP">
+                    <h2 id="corTitulo">Objetivo Profissional</h2>
+                    <span style="border: none">
+                    <label for="objetivo">Objetivo</label>
+                    <br>
+                    <textarea id="objetivo" name="objetivo" cols="200"></textarea>
+                    </span>
+                </div>
+
+                <div class="formacaoAcademica" id="formacaoAcademica">
+                    <h2 id="corTitulo">Formação Acadêmica</h2>
+                    <d id="camposFormacao">
+
+                        <span>
+                        <label for="instituicao">Instituição:</label>
+                        <input type="text" id="instituicao">
+                    </span>
+
+                        <span>
+                        <label for="nivelFormacao">Nível</label>
+                        <select id="nivelFormacao">
+                            <option value="">Selecione</option>
+                            <option value="fundComp">Fundamental Completo</option>
+                            <option value="fundIncomp">Fundamental Incompleto</option>
+                            <option value="fundCurs">Fundamental Cursando</option>
+                            <option value="medioComp">Médio Completo</option>
+                            <option value="medioIncomp">Médio Incompleto</option>
+                            <option value="medioCurs">Médio Cursando</option>
+                            <option value="superiorComp">Superior Completo</option>
+                            <option value="superiorIncomp">Superior Incompleto</option>
+                            <option value="superiorCurs">Superior Cursando</option>
+                        </select>
+                    </span>
+                        <span>
+
+                        <label for="cursoa">Curso:</label>
+                        <input type="text" id="curso">
+                    </span>
+                        <span>
+                        <label for="dataInicio">Data de início:</label>
+                        <input type="date" id="dataInicio">
+                    </span>
+                        <span id="Conclusao">
+                        <label for="dataConclusao">Data de conclusão:</label>
+                        <input type="date" id="dataConclusao">
+                    </span>
+                        <span id="ConclusaoEsperada">
+                        <label for="dataConclusaoEsperada">Mês/Ano de conclusão esperada:</label>
+                        <input type="month" id="dataConclusaoEsperada">
+                    </span>
+                        <button id="addFormAcad">Adicionar</button>
+                        </span>
+
+                </div>
+                <button id="btnNext">Próximo</button>
+                <input type="submit" id="btnSubmit" value="Gerar Curriculo" />
+                <button id="btnBack">Voltar</button>>
+            </form>
         </div>
         <div id="listaFormação">
             <!-- Aqui serão adicionados os itens da lista -->
         </div>
-</div>
-  
-  <script src="js/script.js"></script>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
