--- a/atividade-6/index.html
+++ b/atividade-6/index.html
@@ -6,6 +6,10 @@
     <title>Formulário de Currículo</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
+
+    <script type="module" src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -16,25 +20,20 @@
                 <div id="dadosPessoais">
                     <h2 id="corTitulo">Dados Pessoais</h2>
                     <span>
-                    <label for="nome">Nome Completo:</label>
-                    <input type="text" id="nome" name="name"/>
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome"/>
+                </span>
+                <span>
+                    <label for="sobrenome">Sobrenome:</label>
+                    <input type="text" id="sobrenome" name="sobrenome"/>
                 </span>
 
-                    <span>
-                    <label for="data-nascimento">Data de Nascimento: </label>
+                    <span class="custom-date">
+                    <label for="dataNascimento">Data de Nascimento: </label>
                     <input type="date" id="dataNascimento" name="dataNasc" />
                 </span>
 
-                    <span>
-                    <label for="email">Email: </label>
-                    <input type="email" id="email" name="email" />
-                </span>
-                    <span>
-                    <label for="telefone">Telefone: </label>
-                    <input type="tel" id="telefone" name="phone" placeholder="(xx) xxxxx-xxxx" />
-                </span>
-
-                    <span>
+                <span>
                     <label for="estadoCivil">Estado Civil: </label>
                     <select id="estadoCivil" name="estadoCivil">
                         <option value="">Selecione</option>
@@ -44,19 +43,40 @@
                         <option value="Viúvo(a)">Viúvo(a)</option>
                     </select>
                 </span>
+                <br>
+                    <span>
+                    <label for="email">Email: </label>
+                    <input type="email" id="email" name="email" placeholder="exemplo@exemplo.com" />
+                </span>
+                    <span>
+                    <label for="telefone">Telefone: </label>
+                    <input type="tel" id="telefone" name="phone" placeholder="(xx) xxxxx-xxxx" />
+                    <script>
+                        $(document).ready(function() {
+                          $('#telefone').inputmask('(99) 99999-9999');
+                        });
+                        </script>
+                </span>
 
                     <span>
-                    <label for="endereco">Endereço:</label>
-                    <input type="text" id="endereco" name="address" placeholder="Digite seu endereço" />
+                    <label for="endereco">Estado:</label>
+                    <input type="text" id="estado" name="estado" placeholder="São Paulo" />
+                </span>
+                <span>
+                    <label for="cep">CEP:</label>
+                    <input type="text" id="cep" name="cep" placeholder="00000-000" />
+                    <script>
+                        $(document).ready(function() {
+                          $('#cep').inputmask('99999-999');
+                        });
+                        </script>
                 </span>
                 </div>
 
                 <div class="objetivoP" id="objetivoP">
                     <h2 id="corTitulo">Objetivo Profissional</h2>
                     <span style="border: none">
-                    <label for="objetivo">Objetivo</label>
-                    <br>
-                    <textarea id="objetivo" name="objetivo" cols="200"></textarea>
+                    <textarea id="objetivo" style="resize: none;" name="objetivo" cols="300" rows="8" placeholder="Digite aqui oque você busca para sua primeira experiencia profissional ou para a oportunidade que ira concorrer" required></textarea>
                     </span>
                 </div>
 
@@ -84,14 +104,16 @@
                             <option value="superiorCurs">Superior Cursando</option>
                         </select>
                     </span>
+                    <br>
                         <span>
 
                         <label for="cursoa">Curso:</label>
                         <input type="text" id="curso">
                     </span>
+                    <br>
                         <span>
                         <label for="dataInicio">Data de início:</label>
-                        <input type="date" id="dataInicio">
+                        <input type="date" id="dataInicioF">
                     </span>
                         <span id="Conclusao">
                         <label for="dataConclusao">Data de conclusão:</label>
@@ -105,18 +127,51 @@
                         </span>
 
                 </div>
+                <div class="experienciaProfissional" id="experienciaProfissional">
+                    <h2 id="corTitulo">Experiência Profissional</h2>
+                    <span>
+                        <label for="semExperiencia">Não tive nenhuma experiência profissional</label>
+                        <input type="checkbox" id="semExperiencia" name="semExperiencia" value="semExperiencia">
+                    </span>
+                    <div id="camposExpProf">
+                        <span>
+                        <label for="empresa">Empresa:</label>
+                        <input type="text" id="empresa">
+                    </span>
+                        <span>
+                        <label for="cargo">Cargo:</label>
+                        <input type="text" id="cargo">
+                    </span>
+                        <span>
+                        <label for="dataInicio">Data de início:</label>
+                        <input type="date" id="dataInicioE">
+                    </span>
+                        <span>
+                        <label for="dataConclusao">Data de saída:</label>
+                        <input type="date" id="dataSaida">
+                    </span>
+                        <span>
+                        <label for="atividades">Atividades:</label>
+                        <textarea id="atividades" style="resize: none;" cols="300" rows="5"></textarea>
+                    </span>
+                        <button id="addExpProf">Adicionar</button>
+                    </div>
+                </div>
+                <div class="btns">
+                <button id="btnBack">Voltar</button>
                 <button id="btnNext">Próximo</button>
                 <input type="submit" id="btnSubmit" value="Gerar Curriculo" />
-                <button id="btnBack">Voltar</button>>
+                </div>
             </form>
         </div>
-        <div id="listaFormação">
-            <!-- Aqui serão adicionados os itens da lista -->
+        <div id="listaFormacao">
+        </div>
+        <div id="listaExpProf">
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+
 </body>
 
 </html>
