Terminando Experiencia profissional

--- a/atividade-6/index.html
+++ b/atividade-6/index.html
@@ -76,7 +76,7 @@
                 <div class="objetivoP" id="objetivoP">
                     <h2 id="corTitulo">Objetivo Profissional</h2>
                     <span style="border: none">
-                    <textarea id="objetivo" style="resize: none;" name="objetivo" cols="300" rows="8" placeholder="Digite aqui oque você busca para sua primeira experiencia profissional ou para a oportunidade que ira concorrer" required></textarea>
+                    <textarea id="objetivo" style="resize: none;" name="objetivo" cols="300" rows="8" placeholder="Digite aqui oque você busca para sua primeira experiencia profissional ou para a oportunidade que ira concorrer"></textarea>
                     </span>
                 </div>
 
@@ -129,7 +129,7 @@
                 </div>
                 <div class="experienciaProfissional" id="experienciaProfissional">
                     <h2 id="corTitulo">Experiência Profissional</h2>
-                    <span>
+                    <span id="spSemExp">
                         <label for="semExperiencia">Não tive nenhuma experiência profissional</label>
                         <input type="checkbox" id="semExperiencia" name="semExperiencia" value="semExperiencia">
                     </span>
