--- a/atividade-6/index.html
+++ b/atividade-6/index.html
@@ -130,7 +130,7 @@
                 <div class="experienciaProfissional" id="experienciaProfissional">
                     <h2 id="corTitulo">Experiência Profissional</h2>
                     <span id="spSemExp">
-                        <label for="semExperiencia">Não tive nenhuma experiência profissional</label>
+                        <label for="semExperiencia">Não tenho nenhuma experiência profissional</label>
                         <input type="checkbox" id="semExperiencia" name="semExperiencia" value="semExperiencia">
                     </span>
                     <div id="camposExpProf">
