--- a/atividade-6/index.html
+++ b/atividade-6/index.html
@@ -152,7 +152,7 @@
                     </span>
                         <span>
                         <label for="atividades">Atividades:</label>
-                        <textarea id="atividades" style="resize: none;" cols="300" rows="5"></textarea>
+                        <textarea id="atividades" style="resize: none;" cols="300" rows="5" placeholder="Uma breve explicação sobre suas atividades na empresa e cargo citado"></textarea>
                     </span>
                         <button id="addExpProf">Adicionar</button>
                     </div>
@@ -168,10 +168,10 @@
         </div>
         <div id="listaExpProf">
         </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
