--- a/atividade-6/index.html
+++ b/atividade-6/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script type="module" src="js/script.js" defer></script>
 </head>
 
@@ -16,7 +16,7 @@
     <div class="containerGeral">
         <h1>Gerador de Curriculo</h1>
         <div class="quadro">
-            <form id="form" action="curriculo.html" method="get">
+            <form id="form" action="#" method="post">
                 <div id="dadosPessoais">
                     <h2 id="corTitulo">Dados Pessoais</h2>
                     <span>
@@ -85,8 +85,8 @@
                     <d id="camposFormacao">
 
                         <span>
-                        <label for="instituicao">Instituição:</label>
-                        <input type="text" id="instituicao">
+                        <label for="instituicaoF">Instituição:</label>
+                        <input type="text" id="instituicaoF">
                     </span>
 
                         <span>
@@ -107,12 +107,12 @@
                     <br>
                         <span>
 
-                        <label for="cursoa">Curso:</label>
-                        <input type="text" id="curso">
+                        <label for="cursoF">Curso:</label>
+                        <input type="text" id="cursoF">
                     </span>
                     <br>
                         <span>
-                        <label for="dataInicio">Data de início:</label>
+                        <label for="dataInicioF">Data de início:</label>
                         <input type="date" id="dataInicioF">
                     </span>
                         <span id="Conclusao">
@@ -143,7 +143,7 @@
                         <input type="text" id="cargo">
                     </span>
                         <span>
-                        <label for="dataInicio">Data de início:</label>
+                        <label for="dataInicioE">Data de início:</label>
                         <input type="date" id="dataInicioE">
                     </span>
                         <span>
@@ -157,18 +157,65 @@
                         <button id="addExpProf">Adicionar</button>
                     </div>
                 </div>
+                <div class="idiomas" id="idiomas">
+                    <h2 id="corTitulo">Idiomas</h2>
+                    <div id="camposIdiomas">
+                        <span>
+                        <label for="idioma">Idioma:</label>
+                        <input type="text" id="idioma">
+                    </span>
+                        <span>
+                        <label for="nivelIdioma">Nível:</label>
+                        <select id="nivelIdioma">
+                            <option value="">Selecione</option>
+                            <option value="Básico">Básico</option>
+                            <option value="Intermediário">Intermediário</option>
+                            <option value="Avançado">Avançado</option>
+                        </select>
+                    </span>
+                        <button id="addIdioma">Adicionar</button>
+                    </div>
+                </div>
+                <div class="cursos" id="cursos">
+                    <h2 id="corTitulo">Cursos</h2>
+                    <div id="camposCursos">
+                        <span>
+                        <label for="cursoC">Curso:</label>
+                        <input type="text" id="cursoC">
+                    </span>
+                        <span>
+                        <label for="instituicaoC">Instituição:</label>
+                        <input type="text" id="instituicaoC">
+                    </span>
+                        <span>
+                        <label for="dataInicioC">Data de início:</label>
+                        <input type="date" id="dataInicioC">
+                    </span>
+                        <span>
+                        <label for="dataConclusaoC">Data de conclusão:</label>
+                        <input type="date" id="dataConclusaoC">
+                    </span>
+                        <button id="addCurso">Adicionar</button>
+                    </div>
+                </div>
                 <div class="btns">
                 <button id="btnBack">Voltar</button>
                 <button id="btnNext">Próximo</button>
-                <input type="submit" id="btnSubmit" value="Gerar Curriculo" />
+                <input type="submit" id="btnSubmit" value="Gerar PDF" />
                 </div>
             </form>
         </div>
-        <div id="listaFormacao">
-        </div>
-        <div id="listaExpProf">
-        </div>
-
+            <div id="listaFormacao">
+            </div>
+            <div id="listaExpProf">
+            </div>
+            <div id="listaIdiomas">
+            </div>
+            <div id="listaCursos">
+            </div>
+    </div>
+    <div id="curriculo">
+        <!--Modelo final será gerado aqui-->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
